@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==10/29/2008
+Derision: Mobs in water should no longer sink to the bottom.
+
 ==10/27/2008
 seveianrex: Added server-side code for WAR sturdiness AA
 Angelox: (Cbodmer) Experience loss based on cbodmers formula with added rule to regulate loss amount
